Use PostgreSQL for users, teams (#14)
* Implement PostgreSQL tables for users, teams

* Cleanup

* Fix nonce IDs

* Reorganize a bit

* Change JDBC driver, prevent SQL inj., perf. opts., basic logging